Added functionality to pick up the players and show theirs data before the battle.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Diego Cardoso",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.9.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.6.5",
